tests/specs/ecosystem/kwhinnery/animals/0_0_17.test
kwhinnery/animals/0.0.17
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/types/animal'.
    at file://<tmpdir>/types/mod.d.ts:1:15

TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/types/cat'.
    at file://<tmpdir>/types/mod.d.ts:2:15

TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/types/dog'.
    at file://<tmpdir>/types/mod.d.ts:3:15

Found 3 errors.

